# loan-bre-system

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-ci.lock.txt  requirements-ci.txt  requirements.txt  sonar-project.properties
.github/release-notes/es/: TEMPLATE.md  v0.1.0.md  v0.2.0.md  v0.3.0.md
.github/workflows/: main-guard-ci.yml
data/labels/versions/: loan_labels_20260322_173211.meta.json
data/processed/: loan_labels.csv  loans_cleaned.csv
docs/context/: 00_meta.md  01_developer_profile.md  02_project_identity.md  03_architecture_modules.md  04_bre_module.md  05_audit_module.md  06_code_conventions.md  07_ai_assistant_rules.md  08_current_status_next_steps.md  09_glossary.md  10_session_history.md  11_approval_criteria.md  12_session_protocol.md  13_branch_protection_policy.md  DECISIONS.md  README.md
docs/context/agents/: chatgpt.md  claude.md  copilot.md
docs/prompts/v.1.1.0/: lifecycle_template.md  (+1 more)
docs/releases/: README.md
notebooks/: eda_analysis.py
src/: audit_logger.py  batch_evaluator.py  bre_engine.py  bre_rules.py  data_loader.py  loan_application.py  sonar_gate_probe.py
src/api/: __init__.py  dependencies.py  main.py
src/db/: __init__.py  database.py  schema.py
tests/: conftest.py  test_api_audit.py  test_api_auth.py  test_api_evaluate.py  test_audit_logger.py  test_batch_evaluator.py  test_bre_engine.py  test_bre_rules.py  test_ci_intentional_failure.py  test_data_loader.py  test_db_repositories.py  test_integral_dataset_flow.py  test_loan_application.py  test_rule_engine_decisions.py
(+14 files in other folders)
