[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-bre-system"
version = "0.1.0"
description = "Sistema de solicitudes de préstamos con motor de reglas"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]